# openwallet

doc/: otc.sql
monitor/: CMakeLists.txt  README.md
monitor/conf/: config-example.json  config.json
monitor/include/: common.h  rpc.h  syncer.h
monitor/src/: common.cpp  main.cpp  rpc.cpp  syncer.cpp
server/: CMakeLists.txt  config-example.json  config.json
server/ethereum/: CMakeLists.txt
server/ethereum/libethereum/: Common.cpp  Dagger.cpp  State.cpp
server/src/: CMakeLists.txt  db_mysql.cpp  db_mysql.h  ethapi.cpp  ethapi.h  ethwalletweb3.py  httpserver.cpp  main.cpp  rest.cpp  tags
server/src/rpc/: client.cpp  client.h  relay.cpp  server.h
tool/: CMakeLists.txt  config.json  params.json
tool/src/: main.cpp
